<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="17dp"
    tools:context=".DetailCrocodicCoreActivity">

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvSekolah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sekolah"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnKembali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/kembali"
        android:textAllCaps="false"
        android:backgroundTint="@android:color/holo_red_dark"/>






</LinearLayout>